2007-01-07	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.0.0-rc2 release

	* INSTALL:
	added missing build-requirement

	* Makefile.am:
	added some "rm -f"-calls to clean-target for not leaving files created
	during build-process

	* setup/Makefile.am:
	marked setup as not-installable target

	* ica/Makefile.am:
	* italc/Makefile.am:
	added manpages to EXTRA_DIST-variable

	* common/Makefile.am:
	explicitely list files for EXTRA_DIST instead of using wildcards, thus
	files built by configure are not packaged into distribution anymore

	* Makefile.svn:
	commented out make-call for LUPUS

2007-01-06	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.rc.in:
	* ima/italc.rc.in:
	* setup/setup.rc.in:
	fixes and copyright-enhancements

	* ica/src/ica_main.cpp:
	* ica/src/ivs.cpp:
	let the user pass more options for x11vnc

	* ica/ica.1:
	* ica/Makefile.am:
	* ima/italc.1:
	* ima/Makefile.am:
	added manpages

2007-01-05	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* INSTALL:
	rewritten for new version

2007-01-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* README:
	* ima/dialogs/about.ui:
	* ima/resources/splash.png:
	extended copyright-notice from 2006 to 2007

2006-12-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/dsa_key.cpp:
	* common/src/isd_base.cpp:
	* common/src/isd_server.cpp:
	* common/src/ivs_connection.cpp:
	* common/src/local_system.cpp:
	* ica/win32/src/Log.h:
	* ica/win32/src/Log.cpp:
	* ica/win32/src/stdhdrs.cpp:
	* ica/src/demo_server.cpp:
	* ica/src/ica_main.cpp:
	* ica/src/isd_server.cpp:
	* ica/src/system_service.cpp:
	use Qt-debugging-techniques rather than printf & co

	* common/src/local_system.cpp:
	- under win32, handle logoff-events for not stopping service at logoff
	- added qt-message-handler for logging messages into file
	- do not create user-poll-thread when not building ICA
