@@ -58,15 +58,17 @@ p, li { white-space: pre-wrap; }
         </sizepolicy>
        </property>
        <property name="text" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">iTALC is now completely installed. For using iTALC you either have to restart your computer or start the iTALC Client service manually.&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">If you use iTALC under Windows it's strongly recommended that you install DFMirage-driver from http://www.demoforge.com/dfmirage.htm for a better performance when using iTALC.&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+        <string>iTALC is now completely installed. For using iTALC you either have to restart your computer or start the iTALC Client service manually.</string>
        </property>
        <property name="wordWrap" >
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="saveInstallSettings" >
+       <property name="text" >
+        <string>Save installation settings</string>
        </property>
       </widget>
      </item>
