@@ -1,3 +1,11 @@
+2007-01-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ica/dialogs/page_setup_finished.ui:
+	* ica/src/dialogs.h:
+	* ica/src/main.cpp:
+	* ica/src/dialogs.cpp:
+	first initial (incomplete) support for auto-setup
+
 2007-01-07	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* configure.in:
